--- a/style.css
+++ b/style.css
@@ -1,57 +1,26 @@
-#introduction{
+.operations{
 
-	
-	color: #6f1eb2;
-
+	padding: 5px;
+	padding-top: 1px;
+	font-size: 25px;
 }
-#job{
-
-	color: #c67007;
-
+.op_buttons{
+	display: block;
+	align: left;
+	width: 120px;
+	height: 70px;
 }
-#job_title{
-
-	height: 4rem;
-	width: 6rem;
-	padding: 0.5rem;
-	border: 0.3rem solid #c67007; 
-	border-radius: 0.5rem/0.5rem;
-	text-align: center;
+#spacing{
+	float: right;
+	margin-top: 250px;
 }
-#job_technologies{
-
-	height: 6rem;
-	width: 10rem;
-	border: 0.3rem solid #c67007;
-	border-radius: 0.5rem/0.5rem;
-	text-align: center;
-
+#numbers{
+	float: left;
+	margin-top: 250px;
 }
-#job_qualifications{
-
-	
-	height: 4rem;
-	width: 10rem;
-	border: 0.3rem solid #c67007;
-	border-radius: 0.5rem/0.5rem;
-	text-align: center;
-
-}
-#Web_Projects{
-	color: #0ecc04;
-}
-#indent_items{
-
-	padding-left: 4rem;
-}
-#Work_Experience{
-
-	color:#d1a223;
-
-}
-#personal_statement{
-	color:#bc27dd;
-}
-#cover_letter{
-	color:#29e5d8;
+.num_buttons{
+	display: block;
+	align: left;
+	width: 120px;
+	height: 70px;
 }
