just finished the number row for calculator

--- a/style.css
+++ b/style.css
@@ -50,4 +50,19 @@
 	margin-top: 390px;
 	margin-right: -120px;
 }
+#space_3{
+	float: right;
+	margin-top: 460px;
+	margin-right: -360px;
+}
+#space_2{
+	float: right;
+	margin-top: 460px;
+	margin-right: -240px;
+}
+#space_1{
+	float: right;
+	margin-top: 460px;
+	margin-right: -120px;
+}
 
